deploy/base/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: docker.pkg.github.com/seriousben/club-canin-aylmer-members/site:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: github-docker-registry
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
  - targetPort: 80
    port: 80
  selector:
    app: frontend
---
