deploy/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - club-canin-aylmer.seriousben.com
    secretName: club-canin-aylmer-seriousben-com-tls
  rules:
  - host: club-canin-aylmer.seriousben.com
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
---
